Compiler construction/Solutions/compiler-construction-xi-2/tests/pracownia2/error/083_shadowing_decl_other_fpartype.xi
f(x:int)
f(x:bool)

//@PRACOWNIA
//@should_not_typecheck
